.provarCaches/00D410000011HE0EAM/objects/rstk__icparm__c.object
<CustomObject>
    <description>icparm__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__icparm_div__r.rstk__sydiv_div__c</formula>
        <inlineHelpText>This is an internal system field used to define the external ID of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icparm_afrmsegmentnum__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>&apos;A&apos; Items From Segment Number</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icparm_atosegmentnum__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>&apos;A&apos; Items To Segment Number</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icparm_bfrmsegmentnum__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>&apos;B&apos; Items From Segment Number</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icparm_blanktagsfctr__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Blank Tags Factor</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icparm_btosegmentnum__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>&apos;B&apos; Items To Segment Number</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icparm_cctimesa__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>&apos;A&apos; items times counted</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icparm_cctimesb__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>&apos;B&apos; items times counted</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icparm_cctimesc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>&apos;C&apos; items times counted</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icparm_cfrmsegmentnum__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>&apos;C&apos; Items From Segment Number</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icparm_cstvarlimit__c</fullName>
        <inlineHelpText>Cycle Count Import Cost Change Threshold</inlineHelpText>
        <label>Cycle Cnt Import Cost Change Threshold</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icparm_ctosegmentnum__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>&apos;C&apos; Items To Segment Number</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icparm_cyclecntfreq__c</fullName>
        <inlineHelpText>Cycle Count Frequency</inlineHelpText>
        <label>Cycle Count Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__icparm_daystagsretained__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Number of Days Tags are Retained</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icparm_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Division associated with this Inventory Control Parameter</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Inventory Control Parameters</relationshipLabel>
        <relationshipName>divicparm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icparm_lstcclistdate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Last Date Cycle Count List Generated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__icparm_lstphyrunno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Last Physical Inventory Run Number</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icparm_phyinprocess__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This indicates whether WIP physical inventory is being used.</inlineHelpText>
        <label>Physical Inventory In Process Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icparm_qtyvarlimit__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Cycle Count Qty % Change Alert Threshold</inlineHelpText>
        <label>Cycle Cnt Qty % Change Alert Threshold</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icparm_rcvgind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This indicates whether the Receiving/Inspection  physical inventory is being used.</inlineHelpText>
        <label>Receiving/Inspection Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icparm_subcntrctdmd__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Subcontract Demand Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icparm_wipind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not currently used</inlineHelpText>
        <label>WIP Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Inventory Control Parameters</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ICPARM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Control Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>